# VisCacheSketch

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TODO.md  setup.bat  setup.ps1  setup.sh  sync-submodules.sh
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  paper.yml  validate.yml
Falcor/: setup.bat  setup.sh
Falcor/Source/Falcor/RenderGraph/: RenderGraphImportExport.cpp
Falcor/Source/Falcor/Scene/: Scene.cpp
Falcor/Source/Falcor/Scene/Lights/: LightCollection.cpp
Falcor/Source/Falcor/Scene/Volume/: Grid.cpp
Falcor/Source/Falcor/Utils/: ObjectID.h  StringFormatters.h
Falcor/Source/Falcor/Utils/Debug/: WarpProfiler.cpp
Falcor/Source/Mogwai/: Mogwai.cpp
Falcor/Source/Tools/FalcorTest/: FalcorTest.cpp
Falcor/Source/Tools/RenderGraphEditor/: RenderGraphEditor.cpp
Source/RenderPasses/ReSTIRGIPass/: CMakeLists.txt  FinalShading.cs.slang  InitialSampling.cs.slang  ReSTIRGIPass.cpp  ReSTIRGIPass.h  SpatialReuse.cs.slang  SpatialReuse_VisCache_delta.slang  TemporalReuse.cs.slang
Source/RenderPasses/VisCache/: CMakeLists.txt  ShadingCV.slang  VisCache.cpp  VisCache.h  VisCache.slang  VisCacheDecay.cs.slang  VisCacheInsert.cs.slang
Source/RenderPasses/VisHashFilter/: CMakeLists.txt  ShadingCV.slang  VisHashFilter.h  VisHashFilter.slang
docs/: ABLATION.md  DESIGN.md  PORTING.md  TODO_REVIEW_PLAN.md
implementation/Source/RenderPasses/ReSTIRGIPass/: ReSTIRGIPass.h  SpatialReuse_MLVHF_delta.slang
implementation/Source/RenderPasses/VisHashFilter/: VisHashDecay.cs.slang  VisHashFilter.cpp  VisHashFilter.h  VisHashFilter.slang  VisHashInsert.cs.slang
implementation/scripts/: MLVHF_Graph.py  test_vhf_convergence.py
paper/: CITATIONS.md  RESEARCH_NOTES.md  TODO.md
scripts/: MLVHF_Ablation.py  VisCache_Ablation.py  VisCache_Graph.py
tests/: test_vhf_convergence.py  test_viscache_convergence.py
viscachepaper/: VisibilityCache.compute  VisibilityCache.cs  VisibilityCache.hlsl  generate_paper.py  index.html  multilevel-pathspace-hash-filter.md  multilevel-visibility-hash-filter.md
(+4 files in other folders)
